# Player

./: CMakeLists.txt  Login.pro  main.cpp  save_img.cpp  video_player.cpp  video_player.h  widget.cpp  widget.h
